--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+							<strong class="tg-logo"><a href=""><img src="{{logo.0.logo.url}}" alt="company name here"></a></strong>
 
 
 							<div class="tg-searchbox">
