--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,8 @@
 
 										<li><a href="">Home</a></li>
 										<li><a href="#blog">Blogs</a></li>
+										<li><a href="#top">Blogs</a></li>
+										<li><a href="#">Blogs</a></li>
 										<li><a href="#features">Featured</a></li>
 										<li><a href="#newrelease">New Realease</a></li>
 
@@ -241,7 +243,7 @@
 			<!--************************************
 					Picked By Author Start
 			*************************************&ndash;&gt;-->
-			<section class="tg-sectionspace tg-haslayout">
+			<section class="tg-sectionspace tg-haslayout id="top"">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
