--- a/templates/index.html
+++ b/templates/index.html
@@ -75,14 +75,14 @@
 								<div id="tg-navigation" class="collapse navbar-collapse tg-navigation">
 									<ul>
 
-										<li><a href="">Home</a></li>
-										<li><a href="#blog">Blogs</a></li>
-										<li><a href="#top">Blogs</a></li>
-										<li><a href="#">Blogs</a></li>
-										<li><a href="#features">Featured</a></li>
-										<li><a href="#newrelease">New Realease</a></li>
+										<li><a href="">गृह पृष्ठ</a></li>
+										<li><a href="#blog">ब्लग</a></li>
+										<li><a href="#top">पुस्तकहरु</a></li>
+										
+										<li><a href="#features">फिचर्स</a></li>
+										<li><a href="#newrelease">नयाँ संस्करण</a></li>
 
-										<li><a href="#contact">Contact</a></li>
+										<li><a href="#contact">सल्लाह र सुझाव</a></li>
 										<li class="menu-item-has-children current-menu-item">
 											<a href="javascript:void(0);"><i class="icon-menu"></i></a>
 											<ul class="sub-menu">
@@ -243,7 +243,7 @@
 			<!--************************************
 					Picked By Author Start
 			*************************************&ndash;&gt;-->
-			<section class="tg-sectionspace tg-haslayout id="top"">
+			<section class="tg-sectionspace tg-haslayout" id="top">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
